k8s/paperless/gotenberg-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotenberg
  namespace: paperless
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: gotenberg
  template:
    metadata:
      labels:
        app: gotenberg
    spec:
      containers:
        - name: gotenberg
          image: docker.io/gotenberg/gotenberg:8.37
          ports:
            - containerPort: 3000
          command:
            - "gotenberg"
            - "--chromium-disable-routes=true"
            - "--chromium-allow-list=file:///tmp/.*"
