k8s/paperless/paperless-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  namespace: paperless
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: paperless
  template:
    metadata:
      labels:
        app: paperless
    spec:
      containers:
        - name: paperless
          image: ghcr.io/paperless-ngx/paperless-ngx:3.3.0
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: data-storage
              mountPath: /usr/src/paperless/data
            - name: media-storage
              mountPath: /usr/src/paperless/media
            - name: export-storage
              mountPath: /usr/src/paperless/export
      volumes:
        - name: data-storage
          persistentVolumeClaim:
            claimName: paperless-data
        - name: media-storage
          persistentVolumeClaim:
            claimName: paperless-media
        - name: export-storage
          persistentVolumeClaim:
            claimName: paperless-export
