k8s/paperless/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: paperless
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: docker.io/library/postgres:17.11
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: pgdata-storage
          persistentVolumeClaim:
            claimName: pg-data
