k8s/paperless/redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: paperless
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      securityContext: # fix for "Failed opening the temp RDB file temp-1696.rdb (in server root dir /data) for saving: Permission denied"
        fsGroup: 999
        runAsUser: 999
      containers:
        - name: redis
          image: docker.io/library/redis:8.10.2
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-storage
              mountPath: /data
      volumes:
        - name: redis-storage
          persistentVolumeClaim:
            claimName: redis-data
