k8s/paperless/tika-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tika
  namespace: paperless
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: tika
  template:
    metadata:
      labels:
        app: tika
    spec:
      containers:
        - name: tika
          image: apache/tika:3.3.0.0
          ports:
            - containerPort: 9998
