k8s/paperless/gotenberg-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gotenberg
  namespace: paperless
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: gotenberg
