k8s/paperless/paperless-service.yml
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: paperless
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: paperless
  type: ClusterIP
