k8s/paperless/tika-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tika
  namespace: paperless
spec:
  selector:
    app: tika
  ports:
    - port: 9998
      targetPort: 9998
  type: ClusterIP
