k8s/paperless/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vikunja-ingress
  namespace: vikunja
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: paperless.alexmihai.rocks
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless
                port:
                  number: 8000
  # tls: resolved externally by Nginx Proxy Manager
